[BACKLOG-40660] 10.2 - JDK17 - All startup scripts to add '--add-opens' Java options